--- a/index.html
+++ b/index.html
@@ -1,50 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a70698655e.js" crossorigin="anonymous"></script>
-  <title>Meu Link Tree</title>
-</head>
-<body>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+			rel="stylesheet" />
+		<script
+			src="https://kit.fontawesome.com/a70698655e.js"
+			crossorigin="anonymous"></script>
+		<title>Meu Link Tree</title>
+	</head>
+	<body>
+		<div class="content">
+			<div class="card">
+				<img
+					src="./image/hend.code.png"
+					alt="Foto do Desenvolvedor Web Christopher Henderson" />
+				<h1>Chris Henderson</h1>
+				<p>Desenvolvedor Web FullStack <br />Criador de conteúdo Hend Code</p>
 
-    <div class="content">
-      <div class="card">
-        <img src="./image/Christopher Henderson.jpg" alt="Foto do Desenvolvedor Web Christopher Henderson">
-        <h1>Christopher Henderson</h1>
-        <p>Web Designer & Estudante Web Dev</p>
-        <a href="https://www.linkedin.com/in/christopher-henderson-633495241/"><button class="linkedin"><i class="fa-brands fa-linkedin-in"></i>Linkedin</button></a>
-        <a href="https://github.com/chrishenderson07"><button class="github"> <i class="fa-brands fa-github"></i> Github</button></a>
-        <a href="https://discord.com/users/christopher_#6041"><button class="discord"><i class="fa-brands fa-discord"></i> Discord</button></a>
-        <a href="https://api.whatsapp.com/send?phone=5521986334550&text=Ol%C3%A1%20Christopher%2C%20eu%20vim%20do%20seu%20Linktree%20e%20gostaria%20de%20conversar%20com%20voc%C3%AA"><button class="whatsapp"><i class="fa-brands fa-whatsapp"></i> Whatsapp</button></a>
-      </div>
-      <p>Feito com <i class="far fa-heart"></i> por mim mesmo</p>
-    </div>
+				<a href="https://www.youtube.com/@hendcode"
+					><button class="youtube">
+						<i class="fa-brands fa-youtube"></i> Youtube
+					</button></a
+				>
+				<a href="https://www.instagram.com/hend.code/"
+					><button class="whatsapp">
+						<i class="fa-brands fa-instagram"></i> Instagram
+					</button></a
+				>
+				<a href="https://www.instagram.com/hend.code/"
+					><button class="whatsapp">
+						<i class="fa-brands fa-tiktok"></i> Tik Tok
+					</button></a
+				>
 
-  <div class="particle">
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  </div>
-  <!--Teste de Commit-->
-</body>
+				<a href="https://www.linkedin.com/in/christopher-henderson-633495241/"
+					><button class="linkedin">
+						<i class="fa-brands fa-linkedin-in"></i>Linkedin
+					</button></a
+				>
+				<a href="https://github.com/chrishenderson07"
+					><button class="github">
+						<i class="fa-brands fa-github"></i> Github
+					</button></a
+				>
+				<a href="https://www.paypal.com/donate/?hosted_button_id=7HFBPVXTQ64R4"
+					><button class="github">
+						<i class="fa-solid fa-mug-hot"></i> Give me a Coffee
+					</button></a
+				>
+			</div>
+			<!-- 			<p>Feito com <i class="far fa-heart"></i> por mim mesmo</p>
+ -->
+		</div>
+
+		<div class="particle">
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+		<!--Teste de Commit-->
+	</body>
 </html>
