att tik tok link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<i class="fa-brands fa-instagram"></i> Instagram
 					</button></a
 				>
-				<a href="https://www.instagram.com/hend.code/"
+				<a href="https://www.tiktok.com/@hend.code"
 					><button class="whatsapp">
 						<i class="fa-brands fa-tiktok"></i> Tik Tok
 					</button></a
