feat: adjusts links

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 				<h1>Chris Henderson</h1>
 				<p>Desenvolvedor Web FullStack <br />Criador de conteúdo Hend Code</p>
 
-				<a href="https://www.youtube.com/@hendcode"
+				<a href="https://wa.me/5521986334550?text=Ol%C3%A1+Hend+Code%2C+eu+vim+do+seu+Instagram+e+gostaria+de+solicitar+um+Or%C3%A7amento."
 					><button class="youtube">
-						<i class="fa-brands fa-youtube"></i> Youtube
+						<i class="fa-brands fa-whatsapp"></i> Portfólio & Orçamentos
 					</button></a
 				>
 				<a href="https://www.instagram.com/hend.code/"
@@ -46,7 +46,7 @@
 						<i class="fa-brands fa-linkedin-in"></i>Linkedin
 					</button></a
 				>
-				<a href="https://github.com/chrishenderson07"
+				<!-- <a href="https://github.com/chrishenderson07"
 					><button class="github">
 						<i class="fa-brands fa-github"></i> Github
 					</button></a
@@ -55,7 +55,7 @@
 					><button class="github">
 						<i class="fa-solid fa-mug-hot"></i> Give me a Coffee
 					</button></a
-				>
+				> -->
 			</div>
 			<!-- 			<p>Feito com <i class="far fa-heart"></i> por mim mesmo</p>
  -->
